// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Lists /> should render compact correctly 1`] = `
<ul
  className="list-unstyled"
>
  <li
    className="my-3"
    key="22222"
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className="row no-gutters mb-2"
        >
          <div
            className="col"
            key="0"
          >
            <Link
              replace={false}
              to="/list/22222"
            >
              <Poster
                crop={true}
                poster="1.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="1"
          >
            <Link
              replace={false}
              to="/list/22222"
            >
              <Poster
                crop={true}
                poster="2.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="2"
          >
            <Link
              replace={false}
              to="/list/22222"
            >
              <Poster
                crop={true}
                poster="3.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="3"
          />
          <div
            className="col"
            key="4"
          />
        </div>
      </div>
      <div
        className=""
      >
        <h6
          className="mb-0"
        >
          <Link
            className="link"
            replace={false}
            to="/list/22222"
          >
            List B
          </Link>
        </h6>
        <small
          className="text-muted"
        >
          3 films listed by user2
        </small>
      </div>
    </div>
  </li>
  <li
    className="my-3"
    key="33333"
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className="row no-gutters mb-2"
        >
          <div
            className="col"
            key="0"
          >
            <Link
              replace={false}
              to="/list/33333"
            >
              <Poster
                crop={true}
                poster="3.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="1"
          >
            <Link
              replace={false}
              to="/list/33333"
            >
              <Poster
                crop={true}
                poster="1.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="2"
          />
          <div
            className="col"
            key="3"
          />
          <div
            className="col"
            key="4"
          />
        </div>
      </div>
      <div
        className=""
      >
        <h6
          className="mb-0"
        >
          <Link
            className="link"
            replace={false}
            to="/list/33333"
          >
            List C
          </Link>
        </h6>
        <small
          className="text-muted"
        >
          2 films listed by user2
        </small>
      </div>
    </div>
  </li>
  <li
    className="my-3"
    key="11111"
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className="row no-gutters mb-2"
        >
          <div
            className="col"
            key="0"
          >
            <Link
              replace={false}
              to="/list/11111"
            >
              <Poster
                crop={true}
                poster="1.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="1"
          />
          <div
            className="col"
            key="2"
          />
          <div
            className="col"
            key="3"
          />
          <div
            className="col"
            key="4"
          />
        </div>
      </div>
      <div
        className=""
      >
        <h6
          className="mb-0"
        >
          <Link
            className="link"
            replace={false}
            to="/list/11111"
          >
            List A
          </Link>
        </h6>
        <small
          className="text-muted"
        >
          1 film listed by user1
        </small>
      </div>
    </div>
  </li>
</ul>
`;

exports[`<Lists /> should render correctly 1`] = `
<ul
  className="list-unstyled"
>
  <li
    className="my-3"
    key="22222"
  >
    <div
      className="row"
    >
      <div
        className="col-md-4"
      >
        <div
          className="row no-gutters mb-2"
        >
          <div
            className="col"
            key="0"
          >
            <Link
              replace={false}
              to="/list/22222"
            >
              <Poster
                crop={true}
                poster="1.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="1"
          >
            <Link
              replace={false}
              to="/list/22222"
            >
              <Poster
                crop={true}
                poster="2.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="2"
          >
            <Link
              replace={false}
              to="/list/22222"
            >
              <Poster
                crop={true}
                poster="3.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="3"
          />
          <div
            className="col"
            key="4"
          />
        </div>
      </div>
      <div
        className="col-md-8"
      >
        <h5
          className="mb-0"
        >
          <Link
            className="link"
            replace={false}
            to="/list/22222"
          >
            List B
          </Link>
        </h5>
        <small
          className="text-muted"
        >
          3 films listed by user2
        </small>
        <div />
      </div>
    </div>
  </li>
  <li
    className="my-3"
    key="33333"
  >
    <div
      className="row"
    >
      <div
        className="col-md-4"
      >
        <div
          className="row no-gutters mb-2"
        >
          <div
            className="col"
            key="0"
          >
            <Link
              replace={false}
              to="/list/33333"
            >
              <Poster
                crop={true}
                poster="3.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="1"
          >
            <Link
              replace={false}
              to="/list/33333"
            >
              <Poster
                crop={true}
                poster="1.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="2"
          />
          <div
            className="col"
            key="3"
          />
          <div
            className="col"
            key="4"
          />
        </div>
      </div>
      <div
        className="col-md-8"
      >
        <h5
          className="mb-0"
        >
          <Link
            className="link"
            replace={false}
            to="/list/33333"
          >
            List C
          </Link>
        </h5>
        <small
          className="text-muted"
        >
          2 films listed by user2
        </small>
        <div />
      </div>
    </div>
  </li>
  <li
    className="my-3"
    key="11111"
  >
    <div
      className="row"
    >
      <div
        className="col-md-4"
      >
        <div
          className="row no-gutters mb-2"
        >
          <div
            className="col"
            key="0"
          >
            <Link
              replace={false}
              to="/list/11111"
            >
              <Poster
                crop={true}
                poster="1.jpg"
              />
            </Link>
          </div>
          <div
            className="col"
            key="1"
          />
          <div
            className="col"
            key="2"
          />
          <div
            className="col"
            key="3"
          />
          <div
            className="col"
            key="4"
          />
        </div>
      </div>
      <div
        className="col-md-8"
      >
        <h5
          className="mb-0"
        >
          <Link
            className="link"
            replace={false}
            to="/list/11111"
          >
            List A
          </Link>
        </h5>
        <small
          className="text-muted"
        >
          1 film listed by user1
        </small>
        <div />
      </div>
    </div>
  </li>
</ul>
`;
